Web Dec  1  8:27:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Applied and modified/rewrote patch by Jonathan Gapen
	* Headers/gnustep/gui/NSImage.h: Moved excess BOOL ivar to _flags.
	* Headers/NSView.h: Added -enclosingScrollView method and NSScrollView
	class reference.
	* Source/NSImage.m ([NSImage -setFlipped:]): Implemented.
	([NSImage -isFlipped]): Implemented.
	NOTE: NSImage not updated to respect flipped setting.
	* Source/NSView.m ([NSView -enclosingScrollView]): Implemented.

1999-11-30  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/NSBrowser.m: Add some ivars, removed others.
	* Source/NSBrowser.m: Rewrite for better functionality.

	* Source/NSBrowserCell.m (-drawInteriorWithFrame:inView): Check
	to make sure we have a controlView.
	* Source/NSCell.m: Likewise.
	* Source/NSView.m (-lockFocusInRect:): Check to make sure
	we have a window.
	(patches from 	F. Wolff <wolff@cybercable.fr>).

Tue Nov 30 19:44:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: Rewrote ([-encodeWithCoder:]) and
	([-initWithCoder:]) so they actually work (more or less).
	Fixed ([-setExcludedFromWindowsMenu:]) to update windows menu.

Tue Nov 30 11:52:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCachecImageRep.m: Improve initialisation and added
	partial implementations (no scaling) for ([-drawAtPoint:]) and
	([-drawInRect:]) - the superclass versions didn't work due to
	current state of gstate management.

Mon Nov 29 17:23:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSMatrix.m: Memory bounds error fixed.
	* Source/NSOpenPanel.m: use any supplied filetype as denoting a file
	package for the purposes of differentiating between packages and
	directories.  Also - better fix for selecting directories when
	multiple selection is allowed.

Mon Nov 29 11:43:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBundle.m: rewrite with new nib loading method.